# EvoWorld

./: .gitignore  CONTEXT.md  LICENSE  QUICK_START.md  README.md  TESTING_GUIDE.md  check_status.sh  start_simulation.sh  test_frontend_connection.py  test_websocket.py  test_websocket_simple.py
.github/workflows/: ci.yml
backend/: Cargo.toml  config.toml  env.example
backend/database/: README.md
backend/scripts/: setup_database.sh
backend/src/: analytics.rs  config.rs  database.rs  main.rs  websocket.rs
backend/src/simulation/: behavior.rs  engine.rs  events.rs  humanoid.rs  mod.rs  resources.rs  terrain.rs  tribe.rs  world.rs
docs/: ROADMAP.md
frontend/: FRONTEND_ENHANCEMENT_PLAN.md  README.md  icon.svg.import  project.godot  test_frontend_functionality.gd
frontend/.godot/editor/: editor_layout.cfg  filesystem_cache10  project_metadata.cfg  script_editor_cache.cfg
frontend/materials/: vignette_material.tres
frontend/scenes/: Building.tscn  Humanoid.tscn  InstantTest.tscn  Main.tscn  OptimizedTest.tscn  Resource.tscn  SimpleTest.tscn  TestScene.tscn  UltraSimple.tscn  WebSocketTest.tscn
frontend/scripts/: BuildingController.gd  BuildingController.gd.uid  HumanoidController.gd  HumanoidController.gd.uid  InstantLoad.gd  MainController.gd  MainController.gd.uid  MinimalController.gd  MinimalController.gd.uid  OptimizedController.gd  ResourceController.gd  ResourceController.gd.uid  SimpleController.gd  SimpleController.gd.uid  WebSocketClient.gd  WebSocketClient.gd.uid  WebSocketTestController.gd  WorldRenderer.gd  WorldRenderer.gd.uid
(+2 files in other folders)
