[package]
name = "evoworld-backend"
version = "0.1.0"
edition = "2021"
authors = ["EvoWorld Team"]
description = "Autonomous civilization evolution simulation engine"

[dependencies]
# Core simulation dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
postgres = "0.19"

# AI and behavior systems
rand = "0.8"
rand_distr = "0.4"
noise = "0.8"

# Spatial and mathematical operations
nalgebra = "0.32"
glam = "0.24"

# Configuration
config = "0.13"
dotenv = "0.15"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket for real-time communication with frontend
tokio-tungstenite = "0.20"
futures-util = "0.3"

# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "evoworld-sim"
path = "src/main.rs"

[[bin]]
name = "evoworld-analytics"
path = "src/analytics.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true